--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Photographe à Bordeaux et mobile en Île-de-France, je réalise shootings, retouches et albums photos afin d'immortaliser ce qui compte pour vous et vous permettre de revivre un moment, une émotion...">
 
-            <!-- TWITTER META -->
-            <meta name="twitter:card" content="summary_large_image" />
-                <!-- <meta name="twitter:site" content="@skyminds"> -->
-                <meta name="twitter:title" content="Nina Carducci - Photographe">
-                <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
-                <meta name="twitter:image" content="./assets/images/nina-portrait-photo.webp">
+        <!-- TWITTER META -->
+        <meta name="twitter:card" content="summary_large_image" />
+            <meta name="twitter:title" content="Nina Carducci - Photographe">
+            <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+            <meta name="twitter:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
-            <!-- FACEBOOK META -->
-            <meta property="og:title" content="Nina Carducci - Photographe">
-                <meta property="og:type" content="article">
-                <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
-                <meta property="author" content="Nina Carducci">
-                <meta property="og:image" content="./assets/images/nina-portrait-photo.webp">
+        <!-- FACEBOOK META -->
+        <meta property="og:title" content="Nina Carducci - Photographe">
+            <meta property="og:type" content="website">
+            <meta property="og:url" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/">
+            <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+            <meta property="og:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-            <link rel="stylesheet" href="./assets/style.css">
+            <link rel="stylesheet" href="./assets/style.min.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
         
         <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
             <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-            <script src="./assets/maugallery.js" async></script>
-            <script src="./assets/scripts.js" async></script>
+            <script src="./assets/maugallery.min.js" async></script>
+            <script src="./assets/scripts.min.js" async></script>
+
+            <!-- RICH SNIPPETS -->
             <script type="application/ld+json">
                 {
                     "@context": "https://schema.org",
@@ -49,7 +50,7 @@
                             "@type": "Region",
                             "name": "Île-de-France"
                         },   
-                        "image": "./assets/images/nina-portrait-photo.webp",
+                        "image": "https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp",
                         "url": "https://jeanne4l.github.io/oc-nina-carducci-portfolio/",
                         "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
                         "telephone": "05.56.67.78.89",
@@ -100,6 +101,7 @@
             
         <title>Nina Carducci - Photographe</title>
     </head>
+
     <body>
         <header>
             <h1 class="name">Nina Carducci</h1>
@@ -126,6 +128,7 @@
             </nav>
         </header>
 
+        <!-- CARROUSEL -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -153,6 +156,7 @@
             </button>
         </div>
 
+        <!-- ABOUT -->
         <div id="about">
             <div class="picture left">
                 <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci">
@@ -165,8 +169,7 @@
             </div>
         </div>
 
-        <div class="overlay"></div>
-
+        <!-- GALLERY -->
         <section id="gallery">
             <h2 class="title">Mon portfolio</h2>
             <div class="container py-3">
@@ -193,6 +196,7 @@
             </div>
         </section>
 
+        <!-- SERVICES -->
         <section id="services">
             <h2 class="title">Mes services</h2>
             <div class="container">
@@ -221,7 +225,7 @@
                 <div class="service">
                     <div class="service__description">
                         <h3>Album photos</h3>
-                        <p>Imprimer vos photos est un moyen sûr de les conserver dans le temps. Créez un album personnalisé à offrir ou à partager avec vos proches.</p>
+                        <p>Imprimer vos photos est un moyen sûr de les conserver dans le temps. Créez un album personnalisé à offrir ou à partager avec vos proches</p>
                     </div>
                     <div class="service__price">
                         <h4>400€ album A4</h4>
@@ -240,6 +244,7 @@
             </figure>
         </div>
 
+        <!-- CONTACT -->
         <section id="contact">
             <div class="container">
                 <div class="form-container">
@@ -257,10 +262,9 @@
                 </div>
 
                 <div class="picture right">
-                    <img src="./assets/images/camera-photo.webp" alt="photo d'un appareil photo">
+                    <img src="./assets/images/camera-photo.webp" alt="zoom sur un appareil photo">
                 </div>
             </div>
         </section>
-        <!-- <script src="script.js"></script> -->
     </body>
 </html>
