--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <meta name="description" content="Photographe à Bordeaux et mobile en Île-de-France, je réalise shootings, retouches et albums photos afin d'immortaliser ce qui compte pour vous et vous permettre de revivre un moment, une émotion...">
 
         <!-- TWITTER META -->
-        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:card" content="summary_large_image">
             <meta name="twitter:title" content="Nina Carducci - Photographe">
             <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
             <meta name="twitter:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
@@ -19,7 +19,9 @@
             <meta property="og:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-            <link rel="stylesheet" href="./assets/style.min.css">
+            <!-- <link rel="stylesheet" href="./assets/style.min.css"> -->
+            <link rel="stylesheet" href="./assets/style.css">
+
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -124,7 +126,7 @@
         </header>
 
         <!-- CARROUSEL -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -132,13 +134,29 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches" loading="lazy">
+                    <picture>
+                        <source media="(max-width: 750px)" srcset="./assets/images/slider/person-walking-photo-mobile.webp 500w" sizes="100vw">
+                        <source media="(max-width: 1200px)" srcset="./assets/images/slider/person-walking-photo-tablet.webp 1000w" sizes="100vw">
+                        <img src="./assets/images/slider/person-walking-photo.webp" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches" class="d-block w-100">
+                     </picture>
+
+                    <!-- <img src="./assets/images/slider/person-walking-photo.webp" srcset="./assets/images/slider/person-walking-photo-tablet.webp 1000w, ./assets/images/slider/person-walking-photo-mobile.webp 600w" sizes="100vw" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches"> -->
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo en immersion du public à un festival" loading="lazy">
+                    <picture>
+                        <source media="(max-width: 750px)" srcset="./assets/images/slider/festival-photo-mobile.webp 500w" sizes="100vw">
+                        <source media="(max-width: 1200px)" srcset="./assets/images/slider/festival-photo-tablet.webp 1000w" sizes="100vw">
+                        <img src="./assets/images/slider/festival-photo.webp" alt="Photo en immersion du public à un festival" class="d-block w-100" loading="lazy">
+                     </picture>
+                    <!-- <img src="./assets/images/slider/festival-photo.webp" srcset="./assets/images/slider/festival-photo-tablet.webp 1000w, ./assets/images/slider/festival-photo-mobile.webp 600w" sizes="100vw" class="d-block w-100" alt="Photo en immersion du public à un festival" loading="lazy"> -->
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo du marié qui embrasse la mariée" loading="lazy">
+                    <picture>
+                        <source media="(max-width: 750px)" srcset="./assets/images/slider/wedding-photo-mobile.webp 500w" sizes="100vw">
+                        <source media="(max-width: 1200px)" srcset="./assets/images/slider/wedding-photo-tablet.webp 1000w" sizes="100vw">
+                        <img src="./assets/images/slider/wedding-photo.webp" alt="Photo du marié qui embrasse la mariée" class="d-block w-100" loading="lazy">
+                     </picture>
+                    <!-- <img src="./assets/images/slider/wedding-photo.webp" srcset="./assets/images/slider/wedding-photo-tablet.webp 1000w, ./assets/images/slider/wedding-photo-mobile.webp 600w" sizes="100vw" class="d-block w-100" alt="Photo du marié qui embrasse la mariée" loading="lazy"> -->
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
