--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
             <link rel="stylesheet" href="./assets/style.min.css">
-            <!-- <link rel="stylesheet" href="./assets/style.css"> -->
-
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap" rel="stylesheet">
 
             <!-- RICH SNIPPETS -->
             <script type="application/ld+json">
@@ -134,13 +132,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/person-walking-photo.webp" srcset="./assets/images/slider/person-walking-photo.webp 1920w, ./assets/images/slider/person-walking-photo-tablet.webp 1000w, ./assets/images/slider/person-walking-photo-mobile.webp 500w" sizes="(min-width: 320px) 100vw" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches">
+                    <img src="./assets/images/slider/person-walking-photo.webp" srcset="./assets/images/slider/person-walking-photo.webp 1920w, ./assets/images/slider/person-walking-photo-tablet.webp 1000w, ./assets/images/slider/person-walking-photo-mobile.webp 500w" sizes="100vw" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/festival-photo.webp" srcset="./assets/images/slider/festival-photo.webp 1920w, ./assets/images/slider/festival-photo-tablet.webp 1000w, ./assets/images/slider/festival-photo-mobile.webp 500w" sizes="(min-width: 320px) 100vw" class="d-block w-100" alt="Photo en immersion du public à un festival" loading="lazy">
+                    <img src="./assets/images/slider/festival-photo.webp" srcset="./assets/images/slider/festival-photo.webp 1920w, ./assets/images/slider/festival-photo-tablet.webp 1000w, ./assets/images/slider/festival-photo-mobile.webp 500w" sizes="100vw" class="d-block w-100" alt="Photo en immersion du public à un festival" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/wedding-photo.webp" srcset="./assets/images/slider/wedding-photo.webp 1920w, ./assets/images/slider/wedding-photo-tablet.webp 1000w, ./assets/images/slider/wedding-photo-mobile.webp 500w" sizes="(min-width: 320px) 100vw" class="d-block w-100" alt="Photo du marié qui embrasse la mariée" loading="lazy">
+                    <img src="./assets/images/slider/wedding-photo.webp" srcset="./assets/images/slider/wedding-photo.webp 1920w, ./assets/images/slider/wedding-photo-tablet.webp 1000w, ./assets/images/slider/wedding-photo-mobile.webp 500w" sizes="100vw" class="d-block w-100" alt="Photo du marié qui embrasse la mariée" loading="lazy">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
