--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <link rel="stylesheet" href="./assets/style.min.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital@1&display=swap" rel="stylesheet">
 
             <!-- RICH SNIPPETS -->
             <script type="application/ld+json">
